# Polygon

./: CMakeLists.txt  Circle.cpp  Circle.h  Figure.h  Input.cpp  Input.h  Menu.cpp  Menu.h  Point.h  Rectangle.cpp  Rectangle.h  Triangle.cpp  Triangle.h  main.cpp
